# job-understanding-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  design-decisions.md  regression-corpus.md
examples/: extract_job.py  sample_posting.txt
src/job_understanding/: __init__.py  _config.py  _skills.py  base.py  catalog.py  llm.py  router.py  rule_based.py  schema.py  skill_normalizer.py
tests/: test_extraction_quality.py
tests/fixtures/: company_overview_truncation.json  requirements_boundary_leak.json  responsibilities_header_gap.json
